--- a/src/components/benefit/benefit.css
+++ b/src/components/benefit/benefit.css
@@ -5,3 +5,40 @@
 .benefit-title{
     text-align: center;
 }
+
+.part-1{
+    width: 90px;
+    height: 90px;
+    border: 5px solid #5C8692;
+    padding: 5px;
+}
+
+.part-2{
+    width: 70px;
+    height: 70px;
+    background-color: #5C8692;
+    padding: 20px;
+}
+
+.benefit-part-1,
+.benefit-part-2{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 50px;
+}
+
+.parts{
+    width: 340px;
+}
+
+.parts>p{
+    padding-top: 10px;
+    color: #141414;
+    font-size: 26px;
+    font-family: 'Playfair Display', serif;
+}
+
+.parts>span{
+    font-size: 18px;
+    color: #555555;
+}
