--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -44,14 +44,15 @@
 }
 
 .content-img-div {
-    width: 490px;
-    height: 540px;
+    width: 100%;
+    height: 100%;
     border: 10px solid var(--main-color);
 }
 
 .content-img-div>img {
-    margin-left: -100px;
-    height: 515px;
+    width: 100%;
+    margin-left: -50px;
+    height: 100%;
 }
 
 .small-div {
@@ -68,4 +69,18 @@
     border-radius: 5px;
     border: none;
     background-color: var(--white-color);
+}
+
+@media only screen and (max-width: 1023px) {
+    .content {
+        padding: 65px;
+    }
+
+    .content-img-div>img{
+        margin-left: 0px;
+    }
+
+    .small-div{
+        display: none;
+    }
 }
