--- a/src/components/discount/discount.css
+++ b/src/components/discount/discount.css
@@ -1,54 +1,132 @@
-.discount{
+.discount {
     width: 100%;
     height: auto;
     padding: 90px;
     background-color: var(--bg-color);
+    display: flex;
+    justify-content: space-between;
 }
 
 .part1,
-.part2{
+.part2 {
     display: flex;
     align-items: baseline;
     gap: 30px;
     padding: 10px;
 }
 
-.discount-title{
+.discount-title {
     color: #5C8692;
     font-size: 15px;
     font-family: 'Manrope', sans-serif;
 }
 
-.discount-header{
+.discount-header {
     color: #141414;
     width: 390px;
     font-size: 40px;
     font-family: 'Playfair Display', serif;
 }
 
-.text-div{
+.text-div {
     width: 465px;
 }
 
-.discount-left-part>span{
+.discount-left-part>span {
     font-family: 'Manrope', sans-serif;
     font-size: 18px;
     color: #555555;
 }
 
-.about-discount-left{
+.about-discount-left {
     width: 270px;
     background-color: white;
     padding: 15px;
+    border: 2px solid #5C8692;
 }
 
-.about-discount{
+.about-discount {
+    display: flex;
     padding-top: 30px;
 }
 
 .info>p,
-.info>span{
+.info>span {
     color: #141414;
     font-size: 15px;
     margin: 0;
+}
+
+.about-discount-right {
+    width: 190px;
+    height: 167px;
+    background-color: #1E2C30;
+    color: white;
+}
+
+.about-discount-text>span {
+    font-size: 16px;
+    font-family: 'Manrope', sans-serif;
+}
+
+.about-discount-text>p {
+    font-size: 35px;
+    font-family: 'Manrope', sans-serif;
+    margin: 0;
+}
+
+.about-discount-text {
+    text-align: center;
+    padding: 30px;
+}
+
+.discount-right-part {
+    width: 468px;
+    height: 650px;
+    background-color: white;
+    padding: 50px;
+}
+
+.discount-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form {
+    width: 100%;
+    height: 55px;
+    margin: 0px 0 25px;
+    border: 2px solid #5C8692;
+}
+
+.wide-form {
+    width: 100%;
+    height: 110px;
+    margin: 0px 0 25px;
+    border: 2px solid #5C8692;
+}
+
+.form-btn {
+    background-color: #5C8692;
+    height: 55px;
+    border: none;
+}
+
+.icon-form>svg {
+    position: absolute;
+}
+
+
+@media only screen and (max-width: 1023px) {
+    .discount {
+        padding: 65px;
+        gap: 20px;
+    }
+
+    .about-discount-left,
+    .about-discount-right,
+    .discount-right-part {
+        width: 100%;
+    }
+
 }
