--- a/src/components/global.css
+++ b/src/components/global.css
@@ -2,4 +2,9 @@
     --main-color: #5C8692;
     --bg-color: #EBF3F5;
     --white-color: #FFFFFF;
+    --grey-color: #555555;
+    --black-color: #141414;
+    --dark-color: #1E2C30;
+    --manrope: 'Manrope', sans-serif;
+    --playfair: 'Playfair Display', serif;
 }
