--- a/src/components/custom/customer.css
+++ b/src/components/custom/customer.css
@@ -10,15 +10,15 @@
 }
 
 .title {
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--manrope);
     font-size: 15px;
     color: var(--main-color);
 }
 
 .header {
     font-size: 45px;
-    color: #141414;
-    font-family: 'Playfair Display', serif;
+    color: var(--black-color);
+    font-family: var(--playfair);
 }
 
 .customers {
@@ -28,14 +28,14 @@
 
 .customer-part-1,
 .customer-part-2 {
-    background-color: white;
+    background-color: var(--white-color);
     padding: 25px;
 }
 
 .customer-part-1>p,
 .customer-part-2>p {
     font-size: 19px;
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--manrope);
 }
 
 .customer-1,
@@ -45,7 +45,7 @@
     padding: 10px;
     width: 100%;
     height: auto;
-    background-color: #1E2C30;
+    background-color: var(--dark-color);
 }
 
 .customer-info-1,
@@ -56,10 +56,22 @@
 
 .contacts>p,
 .contacts>span {
-    color: white;
+    color: var(--white-color);
     font-size: 15px;
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--manrope);
     margin: 0;
+}
+
+@media only screen and (max-width: 1215px) {
+    .custom-img {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1150px) {
+    .customer {
+        padding: 65px;
+    }
 }
 
 @media only screen and (max-width: 1023px) {
@@ -67,12 +79,28 @@
         gap: 126px;
     }
 
-    .customer{
-        padding: 65px;
-    }
-
     .customer-part-1,
     .customer-part-2 {
         width: 100%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .customers {
+        flex-direction: column;
+    }
+
+    .customer {
+        padding: 45px;
+    }
+}
+
+@media only screen and (max-width: 490px) {
+    .customer {
+        padding: 35px;
+    }
+
+    .header {
+        font-size: 30px;
     }
 }
