--- a/src/components/discount/discount.css
+++ b/src/components/discount/discount.css
@@ -16,16 +16,16 @@
 }
 
 .discount-title {
-    color: #5C8692;
+    color: var(--main-color);
     font-size: 15px;
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--manrope);
 }
 
 .discount-header {
-    color: #141414;
+    color: var(--black-color);
     width: 390px;
     font-size: 40px;
-    font-family: 'Playfair Display', serif;
+    font-family: var(--playfair);
 }
 
 .text-div {
@@ -33,16 +33,16 @@
 }
 
 .discount-left-part>span {
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--manrope);
     font-size: 18px;
-    color: #555555;
+    color: var(--grey-color);
 }
 
 .about-discount-left {
     width: 270px;
-    background-color: white;
+    background-color: var(--white-color);
     padding: 15px;
-    border: 2px solid #5C8692;
+    border: 2px var(--main-color);
 }
 
 .about-discount {
@@ -52,7 +52,7 @@
 
 .info>p,
 .info>span {
-    color: #141414;
+    color: var(--black-color);
     font-size: 15px;
     margin: 0;
 }
@@ -60,18 +60,18 @@
 .about-discount-right {
     width: 190px;
     height: 167px;
-    background-color: #1E2C30;
-    color: white;
+    background-color: var(--dark-color);
+    color: var(--white-color);
 }
 
 .about-discount-text>span {
     font-size: 16px;
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--manrope);
 }
 
 .about-discount-text>p {
     font-size: 35px;
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--manrope);
     margin: 0;
 }
 
@@ -83,8 +83,9 @@
 .discount-right-part {
     width: 468px;
     height: 650px;
-    background-color: white;
+    background-color: var(--white-color);
     padding: 50px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .discount-form {
@@ -96,18 +97,18 @@
     width: 100%;
     height: 55px;
     margin: 0px 0 25px;
-    border: 2px solid #5C8692;
+    border: 2px solid var(--main-color);
 }
 
 .wide-form {
     width: 100%;
     height: 110px;
     margin: 0px 0 25px;
-    border: 2px solid #5C8692;
+    border: 2px solid var(--main-color);
 }
 
 .form-btn {
-    background-color: #5C8692;
+    background-color: var(--main-color);
     height: 55px;
     border: none;
 }
@@ -116,10 +117,14 @@
     position: absolute;
 }
 
+@media only screen and (max-width: 1150px) {
+    .discount {
+        padding: 65px;
+    }
+}
 
 @media only screen and (max-width: 1023px) {
     .discount {
-        padding: 65px;
         gap: 20px;
     }
 
@@ -128,5 +133,35 @@
     .discount-right-part {
         width: 100%;
     }
+}
 
+@media only screen and (max-width: 850px) {
+    .discount {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .discount {
+        padding: 45px;
+    }
+}
+
+@media only screen and (max-width: 490px) {
+    .discount {
+        padding: 35px;
+    }
+
+    .text-div {
+        display: none;
+    }
+
+    .discount-header {
+        width: 340px;
+        font-size: 30px;
+    }
+
+    .about-discount {
+        flex-direction: column;
+    }
 }
