--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,8 +2,8 @@
     padding: 90px;
     width: 100%;
     height: auto;
-    background-color: #1E2C30;
-    color: white;
+    background-color: var(--dark-color);
+    color: var(--white-color);
 }
 
 .footer-container {
@@ -20,7 +20,7 @@
     padding: 10px;
     width: 50px;
     height: 50px;
-    border: 2px solid #5C8692;
+    border: 2px solid var(--main-color);
     text-align: center;
 }
 
@@ -30,7 +30,6 @@
 
 .footer-info {
     display: flex;
-    justify-content: space-between;
 }
 
 .explore,
@@ -46,7 +45,7 @@
 .hours>p,
 .part>p,
 .contact>p {
-    font-family: 'Playfair Display', serif;
+    font-family: var(--playfair);
     font-size: 22px;
 }
 
@@ -56,7 +55,7 @@
 .part>span,
 .contact>span,
 .contact-part>span {
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--manrope);
     font-size: 17px;
     padding-top: 5px;
 }
@@ -66,26 +65,79 @@
     gap: 30px;
 }
 
-.margin-div{
+.margin-div {
     margin-left: 30px;
 }
 
-.margin-part{
+.margin-part {
     margin-left: 13px;
 }
 
-.footer-bottom{
+.footer-bottom {
     text-align: center;
     height: 60px;
     background-color: #111E22;
-    color: white;
-    font-family: 'Manrope', sans-serif;
+    color: var(--white-color);
+    font-family: var(--manrope);
     font-size: 15px;
     padding-top: 20px;
 }
 
-@media only screen and (max-width: 1023px) {
-    .footer{
+.footer-info-part-1,
+.footer-info-part-2 {
+    display: flex;
+    width: 100%;
+    gap: 185px;
+}
+
+@media only screen and (max-width: 1150px) {
+    .footer {
         padding: 65px;
+    }
+}
+
+@media only screen and (max-width: 1070px) {
+    .footer-info {
+        flex-direction: column;
+    }
+
+    .footer-info-part-1,
+    .footer-info-part-2 {
+        padding-top: 25px;
+        gap: 120px;
+    }
+}
+
+
+@media only screen and (max-width: 850px) {
+
+    .footer-info-part-1,
+    .footer-info-part-2 {
+        padding-top: 25px;
+        gap: 100px;
+    }
+}
+
+
+@media only screen and (max-width: 750px) {
+    .footer {
+        padding: 45px;
+    }
+}
+
+@media only screen and (max-width: 660px) {
+    .sites {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 490px) {
+    .footer {
+        padding: 35px;
+    }
+
+    .footer-info-part-2 {
+        flex-direction: column;
+        gap: 65px;
     }
 }
