--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,4 @@
-.navbar-inner{
+.navbar-inner {
     width: 100%;
     height: 70px;
     background-color: var(--white-color);
@@ -7,24 +7,24 @@
     padding: 15px;
 }
 
-.navbar-left-part{
+.navbar-left-part {
     width: 100%;
     display: flex;
     align-items: center;
     gap: 55px;
 }
 
-.navbar-left-part-1{
+.navbar-left-part-1 {
     display: flex;
     align-items: center;
 }
 
-.navbar-left-part-2{
+.navbar-left-part-2 {
     display: flex;
     gap: 10px;
 }
 
-.navbar-right-part{
+.navbar-right-part {
     width: 100%;
     display: flex;
     justify-content: flex-end;
@@ -32,29 +32,29 @@
     gap: 55px;
 }
 
-.icons-part{
+.icons-part {
     display: flex;
     gap: 20px;
     cursor: pointer;
 }
 
-.pages-part{
+.pages-part {
     display: flex;
     gap: 35px;
 }
 
-.pages-part>p{
+.pages-part>p {
     font-size: 14px;
     margin-top: 13px;
     font-weight: 500;
 }
 
-.pages-part>p:hover{
+.pages-part>p:hover {
     color: var(--main-color);
     cursor: pointer;
 }
 
-.navbar-btn{
+.navbar-btn {
     padding: 12px;
     width: 100%;
     border: none;
@@ -66,15 +66,33 @@
 }
 
 @media only screen and (max-width: 1023px) {
-    .navbar-right-part{
+    .navbar-right-part {
         gap: 20px;
     }
 
-    .navbar-left-part{
+    .navbar-left-part {
         gap: 30px;
     }
 
-    .pages-part{
+    .pages-part {
         gap: 15px;
+    }
+}
+
+@media only screen and (max-width: 1023px) {
+    .navbar-left-part-2 {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .pages-part {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 490px) {
+    .navbar-btn {
+        display: none;
     }
 }
