--- a/src/components/beauty/beauty.css
+++ b/src/components/beauty/beauty.css
@@ -52,6 +52,18 @@
     background-color: var(--white-color);
 }
 
+.top-btn {
+    width: 50px;
+    height: 50px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    border-radius: 50%;
+    margin-top: 30%;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
 @media only screen and (max-width: 1319px) {
     .beauty {
         justify-content: center;
