--- a/src/components/discount/discount.css
+++ b/src/components/discount/discount.css
@@ -17,7 +17,7 @@
 
 .discount-title {
     color: var(--main-color);
-    font-size: 15px;
+    font-size: var(--font-15);
     font-family: var(--manrope);
 }
 
@@ -34,7 +34,7 @@
 
 .discount-left-part>span {
     font-family: var(--manrope);
-    font-size: 18px;
+    font-size: var(--font-18);
     color: var(--grey-color);
 }
 
@@ -53,7 +53,7 @@
 .info>p,
 .info>span {
     color: var(--black-color);
-    font-size: 15px;
+    font-size: var(--font-15);
     margin: 0;
 }
 
