--- a/src/components/global.css
+++ b/src/components/global.css
@@ -7,4 +7,7 @@
     --dark-color: #1E2C30;
     --manrope: 'Manrope', sans-serif;
     --playfair: 'Playfair Display', serif;
+    --font-18: 18px;
+    --font-12: 12px;
+    --font-15: 15px;
 }
