--- a/src/components/beauty/beauty.css
+++ b/src/components/beauty/beauty.css
@@ -10,7 +10,7 @@
 }
 
 .spa-info>p {
-    font-size: 18px;
+    font-size: var(--font-18);
     color: var(--grey-color);
     font-family: var(--manrope);
 }
@@ -20,7 +20,7 @@
 }
 
 .hair-info>p {
-    font-size: 18px;
+    font-size: var(--font-18);
     color: var(--grey-color);
     font-family: var(--manrope);
 }
@@ -30,7 +30,7 @@
 }
 
 .body-info>p {
-    font-size: 18px;
+    font-size: var(--font-18);
     color: var(--grey-color);
     font-family: var(--manrope);
 }
@@ -45,7 +45,7 @@
 
 .beauty-btn {
     border: 2px solid var(--main-color);
-    font-size: 12px;
+    font-size: var(--font-12);
     font-family: var(--manrope);
     padding: 12px;
     color: var(--black-color);
