--- a/src/components/custom/customer.css
+++ b/src/components/custom/customer.css
@@ -11,7 +11,7 @@
 
 .title {
     font-family: var(--manrope);
-    font-size: 15px;
+    font-size: var(--font-15);
     color: var(--main-color);
 }
 
@@ -57,7 +57,7 @@
 .contacts>p,
 .contacts>span {
     color: var(--white-color);
-    font-size: 15px;
+    font-size: var(--font-15);
     font-family: var(--manrope);
     margin: 0;
 }
